tests/baselines/reference/controlFlowDeleteOperator.errors.txt
tests/cases/conformance/controlFlow/controlFlowDeleteOperator.ts(14,12): error TS2703: The operand of a delete operator must be a property reference.


==== tests/cases/conformance/controlFlow/controlFlowDeleteOperator.ts (1 errors) ====
    function f() {
        let x: { a?: number | string, b: number | string } = { b: 1 };
        x.a;
        x.b;
        x.a = 1;
        x.b = 1;
        x.a;
        x.b;
        delete x.a;
        delete x.b;
        x.a;
        x.b;
        x;
        delete x;  // No effect
               ~
!!! error TS2703: The operand of a delete operator must be a property reference.
        x;
    }